<resources>
    <string name="app_name">Farmbot</string>
    <string name="cool_season_crops">Cool-Season Crops (e.g., lettuce, spinach, peas, broccoli):</string>
    <string name="cool_season_crops_temperature">• Germination: 40°F to 75°F (4°C to 24°C) \n• Optimum Growth: 55°F to 75°F (13°C to 24°C)\n• Flowering: 55°F to 75°F (13°C to 24°C)</string>
    <string name="warm_season_crops">Warm-Season Crops (e.g., tomatoes, corn, peppers, cucumbers):</string>
    <string name="warm_season_crops_temperature">• Germination: 60°F to 95°F (15°C to 35°C)\n• Optimum Growth: 70°F to 85°F (21°C to 29°C)\n• Flowering: 70°F to 85°F (21°C to 29°C)\n• Fruit Development: 75°F to 95°F (24°C to 35°C)</string>
    <string name="tropical_crops">Tropical Crops (e.g., bananas, mangoes, pineapples):</string>
    <string name="tropical_crops_temperature">• Germination: 70°F to 95°F (21°C to 35°C)\n• Optimum Growth: 75°F to 95°F (24°C to 35°C)</string>
    <string name="root_crops">Root Crops (e.g., potatoes, carrots, radishes):</string>
    <string name="root_crops_temperature">• Germination: 45°F to 85°F (7°C to 29°C) \n• Optimum Growth: 60°F to 80°F (15°C to 27°C)</string>
    <string name="cereal_crops">Cereal Crops (e.g., wheat, rice, oats, barley):</string>
    <string name="cereal_crops_temperature">• Germination: 40°F to 85°F (4°C to 29°C)\n• Optimum Growth: 65°F to 75°F (18°C to 24°C)</string>
    <string name="fruit_trees">Fruit Trees (e.g., apple, citrus, peach):</string>
    <string name="fruit_trees_temperature">• Optimum Growth (During Active Growth Period): 65°F to 85°F (18°C to 29°C)\n• Rest Period (Dormancy): Chilling requirement varies widely depending on the species and variety.</string>
    <string name="grapes">Grapes:</string>
    <string name="grapes_temperature">• Budbreak (Spring): 50°F to 70°F (10°C to 21°C)\n• Flowering: 60°F to 80°F (15°C to 27°C)\n• Fruit Set: 70°F to 90°F (21°C to 32°C)</string>
    <string name="seed_germination">Seed Germination:</string>
    <string name="seed_germination_data">• Optimal Humidity Range: 70% to 90% \n• Suggestion: Higher humidity helps to retain moisture around seeds, promoting germination. You can use a humidity dome or cover to maintain high humidity levels during germination.</string>
    <string name="vegetative_growth">Vegetative Growth:</string>
    <string name="vegetative_growth_data">• Optimal Humidity Range: 50% to 70%  \n• Suggestion: During the vegetative growth stage, moderate humidity levels are suitable for most plants. This range helps plants maintain water uptake while minimizing the risk of fungal diseases.</string>
    <string name="flowering_and_fruiting">Flowering and Fruiting:</string>
    <string name="flowering_and_fruiting_data">• Optimal Humidity Range: 40% to 60% \n• Suggestion: Lower humidity during flowering and fruiting stages helps prevent issues like powdery mildew and improves pollination efficiency.</string>
    <string name="tropical_plants">Tropical Plants:</string>
    <string name="tropical_plants_data">• Optimal Humidity Range: 60% to 80% \n• Suggestion: Tropical plants generally thrive in higher humidity environments. Use misting or a humidifier to maintain appropriate humidity levels.</string>
    <string name="desert_plants">Desert Plants:</string>
    <string name="desert_plants_data">• Optimal Humidity Range: 30% to 50% \n• Suggestion: Desert plants are adapted to low humidity conditions, so avoid excessive humidity to prevent issues like rot.</string>
    <string name="greenhouses">Greenhouses:</string>
    <string name="greenhouse_data">• Optimal Humidity Range: Varies based on the crop, but generally between 40% to 70% \n• Suggestion: Greenhouse humidity levels need to be carefully managed. Proper ventilation and use of humidifiers or misting systems can help maintain optimal conditions.</string>
    <string name="indoor_houseplants">Indoor Houseplants:</string>
    <string name="indoor_houseplants_data">• Optimal Humidity Range: Varies based on plant type, but generally between 40% to 60% \n• Suggestion: Indoor environments can have lower humidity levels due to heating or air conditioning. Use humidifiers or place plants on trays with pebbles and water to increase humidity around them.</string>
    <string name="dry_soil">Dry Soil:</string>
    <string name="dry_soil_data">• Moisture Range: 0 to 20% \n• Suggestion: When the soil moisture is in the lower range (0 to 20%), the soil is considered dry. In this condition, plants may experience water stress, and irrigation is necessary to maintain healthy growth. Water the plants to increase the moisture level in the soil.</string>
    <string name="moist_soil">Moist Soil:</string>
    <string name="optimal_soil_moisture">Optimal Soil Moisture:</string>
    <string name="optimal_soil_moisture_data">• Moisture Range: 40% to 60% \n• Suggestion: This range is often considered the optimal moisture level for most crops. It provides sufficient water for plants to grow and access nutrients efficiently. Try to maintain the soil moisture within this range for the best results.</string>
    <string name="slightly_wet_soil">Slightly Wet Soil:</string>
    <string name="slightly_wet_soil_data">• Moisture Range: 60% to 80% \n• Suggestion: In this range, the soil is slightly wet. While some crops may tolerate slightly wet conditions, prolonged exposure to excessive moisture may lead to root rot and other issues. Ensure proper drainage to prevent waterlogged soil.</string>
    <string name="waterlogged_soil">Waterlogged Soil:</string>
    <string name="waterlogged_soil_data">• Moisture Range: 80% to 100% \n• Suggestion: Waterlogged soil occurs when the moisture level is too high, and the soil cannot drain properly. This can suffocate plant roots and lead to plant stress. Improve drainage to avoid waterlogging.</string>
    <string name="overwatering_alert">Overwatering Alert:</string>
    <string name="overwatering_alert_data">• Moisture Range: Above 100% (saturated soil) \n• Suggestion: If the moisture reading exceeds 100%, it indicates saturated soil, which is a clear sign of overwatering. Overwatering can lead to oxygen deprivation in the soil and root rot. Adjust the irrigation schedule to prevent overwatering.</string>
    <string name="moist_soil_data">• Moisture Range: 20% to 40% \n• Suggestion: In this range, the soil is considered moist, and plants are adequately hydrated. This is generally the ideal range for most crops during active growth. Monitor the soil to ensure it stays within this range for optimal plant development.</string>
    <string name="acidic_soil">Acidic Soil:</string>
    <string name="acidic_soil_data">• pH range: (below 6.0) \n• Plants that Thrive: Acid-loving plants like blueberries, azaleas, rhododendrons, and some conifers. \n• Nutrient Availability: Some nutrients like iron, manganese, and aluminum become more available, but phosphorus and calcium may become less available. \n• Management: If growing acid-loving plants, maintain pH within their preferred range. For other crops, consider adding lime to raise pH if it\'s too low.</string>
    <string name="slightly_acidic_to_neutral_soil">Slightly Acidic to Neutral Soil:</string>
    <string name="slightly_alkaline_soil">Slightly Alkaline Soil:</string>
    <string name="slightly_alkaline_soil_data">• pH range: (7.0 – 7.5) \n• Plants that Thrive: Some legumes, beets, broccoli, and many other common crops. \n• Nutrient Availability: Phosphorus, calcium, and magnesium are more available in this range. \n• Management: Many crops do well in this range, but be cautious if the pH is increasing over time, as it might lead to alkalinity issues.</string>
    <string name="slightly_acidic_to_neutral_soil_data">• pH range: (6.0 – 7.0) \n • Plants that Thrive: Many vegetables, fruits, ornamentals, and common crops prefer this range. \n• Nutrient Availability: Most essential nutrients are optimally available to plants in this range. \n• Microbial Activity: Beneficial microbial activity is usually highest in this range. \n• Management: Maintain pH in this range for a wide range of crops. Regular soil testing can help adjust pH if needed.</string>
    <string name="moderately_alkaline_soil">Moderately Alkaline Soil</string>
    <string name="moderately_alkaline_soil_data">• pH range: (7.5 – 8.5) \n• Plants that Thrive: Certain grasses, asparagus, and other plants that tolerate alkaline conditions. \n• Nutrient Availability: Availability of some micronutrients might decrease. \n• Management: Some crops can tolerate this range, but it\'s important to monitor nutrient availability and address potential deficiencies.</string>
    <string name="highly_alkaline_soil">Highly Alkaline Soil</string>
    <string name="highly_alkaline_soil_data">• pH range: (above 8.5) \n• Plants that Thrive: Few crops thrive in highly alkaline soils, but some desert plants can adapt. \n• Nutrient Availability: Many nutrients become less available, leading to deficiencies. \n• Management: Amend soil to lower pH if growing crops not adapted to highly alkaline conditions. Choose tolerant plants or consider container gardening.</string>
    <string name="gas_range_0_to_100">Gas Range: (0 to 100)</string>
    <string name="gas_range_0_to_100_data">• Status : Safe \n• Gas levels are within safe limits for agricultural environments. No immediate action is required.</string>
    <string name="gas_range_100_to_300">Gas Range: (100 to 300)</string>
    <string name="gas_range_100_to_300_data">• Status : Moderate \n• Gas levels are moderately elevated. Ensure proper ventilation to minimize accumulation. Monitor crop health for any adverse effects.</string>
    <string name="gas_range_300_to_600">Gas Range: (300 to 600)</string>
    <string name="gas_range_300_to_600_data">• Status : Elevated \n• Gas levels are elevated. It\'s important to improve ventilation and ensure proper air exchange. Monitor crops closely for signs of stress.</string>
    <string name="gas_range_600_to_1000">Gas Range: (600 to 1000)</string>
    <string name="note">Note : Consistently monitor gas levels to ensure a healthy agricultural environment.</string>
</resources>
